k8s/monitoring/mon-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: monitoring-daemonset
  namespace: monitoring-ns
  labels:
    app: monitoring
spec:
  selector:
    matchLabels:
      app: monitoring
  template:
    metadata:
      labels:
        app: monitoring
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - "--config.file=/etc/prometheus/prometheus-conf.yml"
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-provisioning
              mountPath: /etc/grafana/provisioning/
            - name: grafana-dashboards
              mountPath: /var/lib/grafana/dashboards
        - name: alertmanager
          image: prom/alertmanager
          ports:
            - containerPort: 9093
          volumeMounts:
            - name: alertmanager-config
              mountPath: /etc/alertmanager/
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
            items:
              - key: prometheus-conf.yml
                path: prometheus-conf.yml
              - key: alert-rules.yml
                path: alert-rules.yml
        - name: grafana-provisioning
          configMap:
            name: grafana-configmap
            items:
              - key: all-dashboards.yml
                path: dashboards/all-dashboards.yml
              - key: datasources.yaml
                path: datasources/all-dashboards.yml
        - name: grafana-dashboards
          configMap:
            name: grafana-configmap
            items:
              - key: dashboard.json
                path: dashboard.json
        - name: alertmanager-config
          configMap:
            name: alertmanager-configmap
            items:
              - key: alertmanager-conf.yml
                path: alertmanager.yml
