k8s/monitoring/mon-service-ext.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service-ext
  namespace: ingress-ns
spec:
  type: ExternalName
  externalName: monitoring-service.monitoring-ns
