k8s/monitoring/mon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service
  namespace: monitoring
spec:
  selector:
    app: monitoring
  ports:
    - name: prometheus
      protocol: TCP
      port: 30003
      targetPort: 9090
    - name: grafana
      protocol: TCP
      port: 30004
      targetPort: 3000
    - name: alertmanager
      protocol: TCP
      port: 30005
      targetPort: 9093
